--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
  
 
 </div>
+❗️IMPORTANT!
+The minimum requirements for installation have increased:
+— Android 9+ (SDK 28);
+— ABIs AArch64 (ARM64-v8a).
  
 </div><a href=https://10drives.com/b/ykyOkbkxdEdbxUFU>
     <button  class="overlay__btn">Download</button></a>
