--- a/index.html
+++ b/index.html
@@ -133,12 +133,21 @@
  
 
 </div>
-<div>
-❗️IMPORTANT!
-The minimum requirements for installation have increased:
-— Android 9+ (SDK 28);
-— ABIs AArch64 (ARM64-v8a).
+
+  <d class="col-sm-6 text-center">
+
+<div class="card mb-3">
+
+  
+  <div class="card-body">
+  
+  <h5 class="card-title gsmedium"><span id="string_privacy">Privacy</span></h5>
+
+<p class="card-text"><span id="string_privacy_summary">View stories, read and write messages without anyone's knowledge</span></p>
+</div>
  </div>
+
+
 </div><a href=https://10drives.com/b/ykyOkbkxdEdbxUFU>
     <button  class="overlay__btn">Download</button></a>
 </div>
