--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
   
   <div class="card-body">
   
-  <h5 class="card-title gsmedium"><span id="string_privacy">Privacy</span></h5>
+  <h5 class="card-title gsmedium"><span id="string_privacy">❗ Important</span></h5>
 
-<p class="card-text"><span id="string_privacy_summary">View stories, read and write messages without anyone's knowledge</span></p>
+<p class="card-text"><span id="string_privacy_summary">The minimum requirements for installation have increased:
+— Android 9+ (SDK 28);</br>
+— ABIs AArch64 (ARM64-v8a).</br></span></p>
 </div>
  </div>
 
