--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>searchr.me</title>
-<script async src="./script.js"></script>
+<script async src="https://raw.githubusercontent.com/Instroid/web/refs/heads/main/script.js"></script>
 
 
 	
